<resources>
    <string name="app_name">LeanBudget</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LeanBudget</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="add_new_expense">Add new expense</string>
    <string name="description_hint">\"Groceries\"</string>
    <string name="category_title">Category</string>
    <string name="cost_hint">\"249.99\"</string>
    <string name="cost_title">Cost</string>
    <string name="description_title">Description</string>
    <string name="add_button">Add</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_new_category">Add new category</string>
    <string name="name_hint">\"Electronics\"</string>
    <string name="name_title">Name</string>
    <string name="fab_text_category">Category</string>
    <string name="fab_text_expense">Expense</string>
    <string name="date_title">Date</string>
    <string name="total_budget_label">Total budget:</string>
    <string name="action_sign_out">Sign out</string>
    <string name="menu_currencies">Currencies</string>
    <string name="currencies_base_currency">Base currency:</string>
    <string name="currencies_dkk">DKK:</string>
    <string name="load_currency_exchange_rates">Load currency exchange rates</string>
    <string name="currencies_usd">USD:</string>
</resources>
