<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpenseActivity">

    <TextView
        android:id="@+id/expense_add_header"
        android:layout_width="409dp"
        android:layout_height="243dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="519dp"
        android:background="#EECCFF"
        android:paddingTop="150dp"
        android:text="@string/add_new_expense"
        android:textAlignment="center"
        android:textColor="#444444"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617" />

    <TextView
        android:id="@+id/expense_add_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="421dp"
        android:text="@string/description_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_add_header"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/expense_add_description_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="364dp"
        android:ems="10"
        android:hint="@string/description_hint"
        android:inputType="textPersonName"
        android:maxLength="20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_add_description_title"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText"
        android:autofillHints="" />

    <TextView
        android:id="@+id/expense_add_cost_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="191dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="191dp"
        android:layout_marginBottom="304dp"
        android:text="@string/cost_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_add_description_input"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/expense_add_cost_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="244dp"
        android:ems="10"
        android:hint="@string/cost_hint"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_add_cost_title"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/expense_add_category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="145dp"
        android:text="@string/category_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_add_cost_input"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/expense_add_category_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_add_category_title" />

    <TextView
        android:id="@+id/expense_add_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="145dp"
        android:text="@string/date_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_add_category_spinner"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/expense_add_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="51dp"
        android:background="#CCFFCC"
        android:onClick="addClicked"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/expense_add_button_cancel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/expense_add_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="51dp"
        android:onClick="cancelClicked"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/expense_add_button_add" />

</androidx.constraintlayout.widget.ConstraintLayout>