<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryActivity">

    <TextView
        android:id="@+id/category_add_header"
        android:layout_width="409dp"
        android:layout_height="243dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="519dp"
        android:background="#CCEEFF"
        android:paddingTop="150dp"
        android:text="@string/add_new_category"
        android:textAlignment="center"
        android:textColor="#444444"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617" />

    <TextView
        android:id="@+id/category_add_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="384dp"
        android:text="@string/name_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_add_header"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/category_add_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="328dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:maxLength="20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_add_name_title"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/category_add_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="51dp"
        android:background="#CCFFCC"
        android:onClick="addClicked"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/category_add_button_cancel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/category_add_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="51dp"
        android:onClick="cancelClicked"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/category_add_button_add" />

</androidx.constraintlayout.widget.ConstraintLayout>